ingress_loadbalancer/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
spec:
  rules:
  - host: stilton.vagrant.vm
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.vagrant.vm
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.vagrant.vm
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
